--- a/Timer and Keyboard MOO ICT/ZeldaWPF.csproj
+++ b/Timer and Keyboard MOO ICT/ZeldaWPF.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AF660250-850B-4E6F-9D4A-72092947E911}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Timer_and_Keyboard_MOO_ICT</RootNamespace>
-    <AssemblyName>Timer and Keyboard MOO ICT</AssemblyName>
+    <RootNamespace>HallowBlade</RootNamespace>
+    <AssemblyName>HallowBlade</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -83,6 +83,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Enemy.cs" />
     <Compile Include="Sword.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -123,6 +124,7 @@
     <None Include="Data\Map\dungeon.json" />
     <None Include="Data\Map\note.json" />
     <None Include="Data\Map\outer.json" />
+    <None Include="Data\Map\test.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -157,7 +159,10 @@
     <Resource Include="Data\Texture\play_button.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\outer_music.mp3" />
+    <Content Include="Data\Music\outer_music.mp3" />
+    <Resource Include="Data\Texture\vampire_front1.png" />
+    <Resource Include="Data\Texture\zombie_front1.png" />
+    <Resource Include="Data\Texture\ghost_front1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
